<resources>
    <string name="app_name">云回收</string>

    <!-- Strings related to login -->
    <string name="usr_name">新用户</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 (注册则不填)</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
